2013-04-17 arnaud.fontaine
* erp5_simulation should not be required as some system do not use simulation.

2011-12-16 arnaud.fontaine
* Display "Own Section" along "Third Party" in AccountingTransactionModule_viewAccountingTransactionList.

2011-12-12 arnaud.fontaine
* Display thousand separator of currency fields according to 'Money Quantity Style' user preference.

2011-10-12 tatuya
* Make it selectable in Accounting Preference how to display bank account.

2011-04-04 Kazuhiko
* configure searchable text property ids for Accounting Period, Accounting Transaction, Balance Transaction, Internal Invoice Transaction, Payment Transaction, Purchase Invoice Transaction and Sale Invoice Transaction.

2010-09-08 yo
* Forgot to add .append. Sorry.

2010-09-08 yo
* Auto-fill mirror accounts, if necessary, before running the accounting transaction constraint.

2010-09-08 yusei
Revert my change on AccountingTransactionModule_getJournalSectionLineList at 2010-09-02.

2010-09-03 yusei
* Add Base_getAccountingWorkflowId and Base_getTranslatedAccountingWorkflowStateItemList to make accounting workflow easier to customise.

2010-09-02 yusei
* Display account title to journal report. Displaying gap id only is not useful at least in Japan.

2010-08-23 yusei
* Allow users to change section on line level. This is sometimes needed. Use case: expense happens at section A, corresponding payment is done at section B. This is journalized in single transaction document.

2010-07-16 yusei
* Revert my previous change and remove added parameters.

2010-07-12 yusei
* Update Node_statAccountingBalance and accept "at_date", "from_date", "to_date" parameters.

2010-05-28 lucas
* Added quantity into Expandable Properties of the default_accounting_transaction_rule object.

2010-05-28 yo
* Keep remaining in the same view after adding a new Accounting Transaction Line.

2010-05-24 kazuhiko
* Call Delivery_updateAppliedRule with activity in accounting_workflow/scripts/buildTradeModelLineList.
