@@ -1,3 +1,6 @@
+2013-09-09 Gabriel Monnerat
+* Refactor ERP5Site_getAccountItemList to search only for validated accounts.
+
 2013-04-17 arnaud.fontaine
 * erp5_simulation should not be required as some system do not use simulation.
 
